--- a/DistributedProcessing/SolverRunner/SolverRunner.fsproj
+++ b/DistributedProcessing/SolverRunner/SolverRunner.fsproj
@@ -1,66 +1,60 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <AssemblyName>Softellect.DistributedProcessing.SolverRunner</AssemblyName>
-        <Platforms>x64</Platforms>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Authors>Konstantin Konstantinov</Authors>
-        <Company>Softellect Systems, Inc.</Company>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Version>9.0.100.5</Version>
-        <PackageVersion>9.0.100.5</PackageVersion>
-        <Description>Softellect Solver Runner ...</Description>
-        <PackageTags>client;server;framework</PackageTags>
-        <RepositoryUrl>https://github.com/kkkmail/Softellect</RepositoryUrl>
-        <PackageProjectUrl>https://github.com/kkkmail/Softellect/tree/master/WorkerNodeService</PackageProjectUrl>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-        <DefineConstants>SOLVER_RUNNER</DefineConstants>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-        <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
-        <PlatformTarget>x64</PlatformTarget>
-        <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-        <PlatformTarget>x64</PlatformTarget>
-        <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
-        <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <Compile Include="Primitives.fs" />
-        <Compile Include="..\Core\AppSettings.fs" Link="AppSettings.fs" />
-        <Compile Include="CommandLine.fs" />
-        <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
-        <Compile Include="NoSql.fs" />
-        <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
-        <Compile Include="OdeSolver.fs" />
-        <Compile Include="Runner.fs" />
-        <Compile Include="Implementation.fs" />
-        <Compile Include="Program.fs" />
-    </ItemGroup>
-
-    <ItemGroup />
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\Analytics\Analytics.fsproj" />
-        <ProjectReference Include="..\..\Messaging\Messaging.fsproj" />
-        <ProjectReference Include="..\Core\Core.fsproj" />
-        <ProjectReference Include="..\..\Sys\Sys.fsproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="alglib.net" Version="3.19.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.3" />
-        <PackageReference Include="Softellect.OdePackInterop" Version="9.0.100.5" />
-        <PackageReference Update="FSharp.Core" Version="9.0.201" />
-    </ItemGroup>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <AssemblyName>Softellect.DistributedProcessing.SolverRunner</AssemblyName>
+    <Platforms>x64</Platforms>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Konstantin Konstantinov</Authors>
+    <Company>Softellect Systems, Inc.</Company>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>9.0.100.20</Version>
+    <PackageVersion>9.0.100.20</PackageVersion>
+    <Description>Softellect Solver Runner ...</Description>
+    <PackageTags>client;server;framework</PackageTags>
+    <RepositoryUrl>https://github.com/kkkmail/Softellect</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/kkkmail/Softellect/tree/master/WorkerNodeService</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <DefineConstants>SOLVER_RUNNER</DefineConstants>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
+    <PlatformTarget>x64</PlatformTarget>
+    <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
+    <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Compile Include="Primitives.fs" />
+    <Compile Include="..\Core\AppSettings.fs" Link="AppSettings.fs" />
+    <Compile Include="CommandLine.fs" />
+    <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
+    <Compile Include="NoSql.fs" />
+    <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
+    <Compile Include="OdeSolver.fs" />
+    <Compile Include="Runner.fs" />
+    <Compile Include="Implementation.fs" />
+    <Compile Include="Program.fs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Analytics\Analytics.fsproj" />
+    <ProjectReference Include="..\..\Messaging\Messaging.fsproj" />
+    <ProjectReference Include="..\Core\Core.fsproj" />
+    <ProjectReference Include="..\..\Sys\Sys.fsproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="alglib.net" Version="3.19.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.3" />
+    <PackageReference Include="Softellect.OdePackInterop" Version="9.0.100.5" />
+    <PackageReference Update="FSharp.Core" Version="9.0.201" />
+  </ItemGroup>
 </Project>
