--- a/Sys/PreBuild.fsproj
+++ b/Sys/PreBuild.fsproj
@@ -23,6 +23,9 @@
   <ItemGroup>
     <None Include="IncrementBuildNumber.fsx" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="9.0.202" />
+  </ItemGroup>
   <Target Name="IncrementBuildNumber" BeforeTargets="CoreCompile">
     <Exec Command="dotnet fsi $(ProjectDir)IncrementBuildNumber.fsx" />
   </Target>
