--- a/MathTests/MathTests.fsproj
+++ b/MathTests/MathTests.fsproj
@@ -34,6 +34,7 @@
         <Compile Include="CoordTests.fs" />
         <Compile Include="MomentTests.fs" />
         <Compile Include="MeanStdDevTests.fs" />
+        <Compile Include="SparseArrayVarianceTests.fs" />
         <Compile Include="MultiplierTests.fs" />
         <Compile Include="TypeTests.fs" />
         <Compile Include="ModelPerformanceTests.fs" />
