--- a/Apps/DistrProc/Migrations/MessagingService/Migrations.MessagingService.csproj
+++ b/Apps/DistrProc/Migrations/MessagingService/Migrations.MessagingService.csproj
@@ -47,4 +47,8 @@
     <ProjectReference Include="..\Common\Migrations.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
