--- a/Apps/DistrProc/Migrations/PartitionerService/Migrations.PartitionerService.csproj
+++ b/Apps/DistrProc/Migrations/PartitionerService/Migrations.PartitionerService.csproj
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
+    <DefineConstants>PARTITIONER</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
