--- a/Apps/DistrProc/Migrations/MessagingService/Migrations.MessagingService.csproj
+++ b/Apps/DistrProc/Migrations/MessagingService/Migrations.MessagingService.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <OutputType>Exe</OutputType>
     <LangVersion>13</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Softellect.Migrations.MessagingService</RootNamespace>
