--- a/Apps/DistrProc/WorkerNodeService/WorkerNodeService.fsproj
+++ b/Apps/DistrProc/WorkerNodeService/WorkerNodeService.fsproj
@@ -36,6 +36,9 @@
         <None Include="..\..\..\DistributedProcessing\WorkerNodeService\Install-WorkerNodeService.ps1" Link="Install-WorkerNodeService.ps1">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Include="..\..\..\Migrate-Database.ps1" Link="Migrate-Database.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Include="..\..\..\Reinstall-WindowsService.ps1" Link="Reinstall-WindowsService.ps1">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
